# MavenBuildDoohicky

./: Cargo.toml  diesel.toml  docker-compose.yml
src/: app.rs  main.rs
