[package]
name = "MavenBuildDoohicky"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-github-webhook-extract = "0.2.0"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.18"
log = "0.4.22"
tower-http = "0.6.1"
tracing = "0.1.40"
diesel = { version = "2.2.4", features = ["postgres"] }
